added the announments and trending still needs to be fixed

--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
                 <input id="searchBar" type="text" name="searchBar">
             </div>
             <div class="profileContainer">
-                <img src="../Admin-Dashboard/images/emoticon-confused-outline.svg" alt="notification">
-                <img class="profilePic" src="./images/emoticon-angry.svg" alt="profilePic">
-                <h3> nigga </h3>
+                    <img class="resize1" src="../Admin-Dashboard/images/bell-ring-outline.svg" alt="">
+                    <img class="resize" src="../Admin-Dashboard/images/emoticon-devil-outline.svg" alt="">
+                <h3> Chris Topherstoper </h3>
             </div>
             <div class="welcomeSection"> 
                 <div class="profilePicTwo"> </div>
-                <div> NIgga 
-                    <div>timmothy honesy</div>
+                <div> Hello, there 
+                    <div>Chris Topherstoper</div>
                 </div>
             </div>
             <div class="buttonContainer">
@@ -50,17 +50,167 @@
         </div>
         <main class="content">
             <div class="projects"> 
-                <h3> Your Projects </h3>
+                <h3 class="projectHeader"> Your Projects </h3>
                 <div class="card">
                     <h3> biggy</h2>
+                    <p> 
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. O
+                        dit excepturi eaque earum maxime, unde at rem incidunt, 
+                        repudiandae facere dolorum obcaecati reiciendis fuga 
+                        illum laboriosam cumque maiores harum consectetur soluta!
+                    </p>
                 </div>
+                <div class="card">
+                    <h3> biggy</h2>
+                    <p> 
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. O
+                        dit excepturi eaque earum maxime, unde at rem incidunt, 
+                        repudiandae facere dolorum obcaecati reiciendis fuga 
+                        illum laboriosam cumque maiores harum consectetur soluta!                    </p>
+                </div>
+                <div class="card">
+                    <h3> biggy</h2>
+                    <p> 
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. O
+                        dit excepturi eaque earum maxime, unde at rem incidunt, 
+                        repudiandae facere dolorum obcaecati reiciendis fuga 
+                        illum laboriosam cumque maiores harum consectetur soluta!                    </p>
+                </div>
+                <div class="card">
+                    <h3> biggy</h2>
+                    <p> 
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. O
+                        dit excepturi eaque earum maxime, unde at rem incidunt, 
+                        repudiandae facere dolorum obcaecati reiciendis fuga 
+                        illum laboriosam cumque maiores harum consectetur soluta!                    </p>
+                </div>
+                <div class="card">
+                    <h3> biggy</h2>
+                    <p> 
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. O
+                        dit excepturi eaque earum maxime, unde at rem incidunt, 
+                        repudiandae facere dolorum obcaecati reiciendis fuga 
+                        illum laboriosam cumque maiores harum consectetur soluta!this card is for all the homies out there
+                    </p>
+                </div>
+                <div class="card">
+                    <h3> biggy</h2>
+                    <p> 
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. O
+                        dit excepturi eaque earum maxime, unde at rem incidunt, 
+                        repudiandae facere dolorum obcaecati reiciendis fuga 
+                        illum laboriosam cumque maiores harum consectetur soluta!this card is for all the homies out there
+                    </p>
+                </div>
+                
             </div>
             <div class="Announcements"> 
                 <h3> Announcements </h3>
+                <div class="AnnouncementsContainer"> 
+                    <div class="AnnouncementCards">
+                        <div class="boldLetter"> 
+                            Site Maintenance
+                            <div> 
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+                                Reiciendis consequuntur natus 
+                            </div>
+                        </div>
+                    </div>
+                    <div class="AnnouncementCards">
+                        <div class="boldLetter"> 
+                            Community Share Day
+                            <div> 
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+                                Reiciendis consequuntur natus 
+                            </div>
+                        </div>
+                    </div>
+                    <div class="AnnouncementCards">
+                        <div class="boldLetter"> 
+                            Updated Privacy Policy
+                            <div> 
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+                                Reiciendis consequuntur natus 
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div> 
             <div class="trending"> 
                 <h3> Trending </h3>
+                <div class="trendingContainer">
+                    <div class="trendingCards">
+                        <img src="../Admin-Dashboard/images/tuqa-nabi-uhnZZUaTIOs-unsplash.jpg" alt="">
+                        <div class="title">@DousKegan
+                            <div> Peacer Upper </div>
+                        </div>
+                    </div>
+                    <div class="trendingCards">
+                        <img src="../Admin-Dashboard/images/lance-reis-T87n3djAN9c-unsplash.jpg" alt="">
+                        <div class="title">@PerpaLinthos
+                            <div> destroyer of dreams </div>
+                        </div>
+                    </div>
+                    <div class="trendingCards">
+                        <img src="../Admin-Dashboard/images/edgar-nKC772R_qog-unsplash.jpg" alt="">
+                        <div class="title">@Kriptain
+                            <div> Chunky Eater</div>
+                        </div>
+                    </div>
+                    <div class="trendingCards">
+                        <img src="../Admin-Dashboard/images/flouffy-VBkIK3qj3QE-unsplash.jpg" alt="">
+                        <div class="title">@BillyBobbyGreen
+                            <div> Golf Pro</div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </main>
     </body>
 </html>
+
+<!--
+    <div class="searchField"> 
+                <div class="searchIcon"> </div>
+                <input id="searchBar" type="text" name="searchBar">
+            </div>
+            <div class="profileContainer">
+                    <img src="../Admin-Dashboard/images/bell-ring-outline.svg" alt="">
+                    <img src="../Admin-Dashboard/images/emoticon-devil-outline.svg" alt="">
+                <h3> Chris Topherstoper </h3>
+            </div>
+            <div class="welcomeSection"> 
+                <div class="profilePicTwo"> </div>
+                <div> Hello, there 
+                    <div>timmothy honesy</div>
+                </div>
+            </div>
+            <div class="buttonContainer">
+                <button>new</button>
+                <button>Upload</button>
+                <button>Share</button>
+            </div>
+-->
+
+<!-- 
+
+    <div class="searchBar">
+        <div class="searchIcon" type="image" src=".//images/search-web.svg"> </div>
+        <div> <input type="text"> </div>
+    </div>
+    <div class="profileBar">
+        <div class="profileName"> 
+            <img src="../Admin-Dashboard/images/bell-ring-outline.svg" alt="noti">
+        </div>
+        <div class="profileName">
+            <img src="../Admin-Dashboard/images/emoticon-confused-outline.svg" alt="">
+        </div>
+        Chirstopher Wistopher
+    </div>
+    </div>
+    <div class="welcomeSection">
+    <img src="../Admin-Dashboard/images/emoticon-angry.svg" alt="">
+    <h3> Hi there,</h3>
+    <h1> Chirstopher Wistopher </h1>
+    </div>
+-->
