Added more images and fixed the card layout on the page and made the trending tab better

--- a/index.html
+++ b/index.html
@@ -32,135 +32,172 @@
         </header>
         <div class="sidebar">
             <div class="icon"> 
-                <div> dashboard</div>
+                <div> 
+                    <img src="" alt="">
+                    dashboard</div>
             </div>
             <ul class="mainLinks">
-                <li> home</li>
-                <li> profile</li>
-                <li> messages</li>
-                <li> History</li>
-                <li> Tasks</li>
-                <li> Communities</li>
+                <li> 
+                    <img src="../Admin-Dashboard/images/home-account.svg" alt="home">
+                    home</li>
+                <li> 
+                    <img src="../Admin-Dashboard/images/card-account-details.svg" alt="">
+                    profile</li>
+                <li> 
+                    <img src="../Admin-Dashboard/images/message.svg" alt="">
+                    messages</li>
+                <li> 
+                    <img src="../Admin-Dashboard/images/clock-time-five.svg" alt="">
+                    History</li>
+                <li> 
+                    <img src="../Admin-Dashboard/images/note-multiple.svg" alt="">
+                    Tasks</li>
+                <li> 
+                    <img src="../Admin-Dashboard/images/account-group.svg" alt="">
+                    Communities</li>
             </ul>
             <ul class="secondLinks"> 
-                <li>Settings</li>
-                <li>Support</li>
-                <li>Privacy</li>
+                <li>
+                    <img src="../Admin-Dashboard/images/cog.svg" alt="">
+                    Settings</li>
+
+                <li>
+                    <img src="../Admin-Dashboard/images/help-box.svg" alt="">
+                    Support</li>
+                <li>
+                    <img src="../Admin-Dashboard/images/shield-check.svg" alt="">
+                    Privacy</li>
             </ul>
         </div>
         <main class="content">
-            <div class="projects"> 
-                <h3 class="projectHeader"> Your Projects </h3>
+            <div class="projectCard">
+                <h3> Your Projects </h3>
                 <div class="card">
-                    <h3> biggy</h2>
-                    <p> 
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. O
-                        dit excepturi eaque earum maxime, unde at rem incidunt, 
-                        repudiandae facere dolorum obcaecati reiciendis fuga 
-                        illum laboriosam cumque maiores harum consectetur soluta!
-                    </p>
+                    <div class="title"> Coolio Project </div>
+                    <div class="cardTxt">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                        Reprehenderit delectus tenetur beatae unde neque! Maxime voluptates 
+                        voluptate voluptas. Rerum, quas nemo? Molestias dolor ducimus impedit 
+                        voluptatum blanditiis, laudantium maxime! Natus?
+                    </div>
+                    <div class="imgBox">
+                    </div>
                 </div>
                 <div class="card">
-                    <h3> biggy</h2>
-                    <p> 
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. O
-                        dit excepturi eaque earum maxime, unde at rem incidunt, 
-                        repudiandae facere dolorum obcaecati reiciendis fuga 
-                        illum laboriosam cumque maiores harum consectetur soluta!                    </p>
+                    <div class="title"> Humongus </div>
+                    <div class="cardTxt">
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Magni, vero 
+                        similique. Aliquam fuga libero dolorum aut nulla, rerum blanditiis error
+                        onsequatur beatae aliquid nisi eveniet impedit assumenda magni earum. Ad.
+                    </div>
+                    <div class="imgBox">
+                    </div>
                 </div>
                 <div class="card">
-                    <h3> biggy</h2>
-                    <p> 
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. O
-                        dit excepturi eaque earum maxime, unde at rem incidunt, 
-                        repudiandae facere dolorum obcaecati reiciendis fuga 
-                        illum laboriosam cumque maiores harum consectetur soluta!                    </p>
+                    <div class="title"> Bigungus </div>
+                    <div class="cardTxt">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempore 
+                        fuga nam eveniet nesciunt quam, atque officia id, cupiditate 
+                        blanditiis eligendi excepturi dolore sequi vel asperiores eaque. 
+                        Id minima consectetur exercitationem.
+                    </div>
+                    <div class="imgBox">
+                    </div>
                 </div>
                 <div class="card">
-                    <h3> biggy</h2>
-                    <p> 
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. O
-                        dit excepturi eaque earum maxime, unde at rem incidunt, 
-                        repudiandae facere dolorum obcaecati reiciendis fuga 
-                        illum laboriosam cumque maiores harum consectetur soluta!                    </p>
+                    <div class="title"> Chirpdslorbedo </div>
+                    <div class="cardTxt">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempore 
+                        fuga nam eveniet nesciunt quam, atque officia id, cupiditate 
+                        blanditiis eligendi excepturi dolore sequi vel asperiores eaque. 
+                        Id minima consectetur exercitationem.
+                    </div>
+                    <div class="imgBox">
+                    </div>
                 </div>
                 <div class="card">
-                    <h3> biggy</h2>
-                    <p> 
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. O
-                        dit excepturi eaque earum maxime, unde at rem incidunt, 
-                        repudiandae facere dolorum obcaecati reiciendis fuga 
-                        illum laboriosam cumque maiores harum consectetur soluta!this card is for all the homies out there
-                    </p>
+                    <div class="title"> Chirpdslorbedo </div>
+                    <div class="cardTxt">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempore 
+                        fuga nam eveniet nesciunt quam, atque officia id, cupiditate 
+                        blanditiis eligendi excepturi dolore sequi vel asperiores eaque. 
+                        Id minima consectetur exercitationem.
+                    </div>
+                    <div class="imgBox">
+                    </div>
                 </div>
                 <div class="card">
-                    <h3> biggy</h2>
-                    <p> 
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. O
-                        dit excepturi eaque earum maxime, unde at rem incidunt, 
-                        repudiandae facere dolorum obcaecati reiciendis fuga 
-                        illum laboriosam cumque maiores harum consectetur soluta!this card is for all the homies out there
-                    </p>
+                    <div class="title"> Chirpdslorbedo </div>
+                    <div class="cardTxt">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempore 
+                        fuga nam eveniet nesciunt quam, atque officia id, cupiditate 
+                        blanditiis eligendi excepturi dolore sequi vel asperiores eaque. 
+                        Id minima consectetur exercitationem.
+                    </div>
+                    <div class="imgBox">
+                    </div>
                 </div>
-                
             </div>
-            <div class="Announcements"> 
-                <h3> Announcements </h3>
-                <div class="AnnouncementsContainer"> 
-                    <div class="AnnouncementCards">
-                        <div class="boldLetter"> 
-                            Site Maintenance
-                            <div> 
-                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
-                                Reiciendis consequuntur natus 
+            <div class="sideBox">
+
+                <div class="Announcements"> 
+                    <h3> Announcements </h3>
+                    <div class="AnnouncementsContainer"> 
+                        <div class="AnnouncementCards">
+                            <div class="boldLetter"> 
+                                Site Maintenance
+                                <div> 
+                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+                                    Reiciendis consequuntur natus 
+                                </div>
+                            </div>
+                        </div>
+                        <div class="AnnouncementCards">
+                            <div class="boldLetter"> 
+                                Community Share Day
+                                <div> 
+                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+                                    Reiciendis consequuntur natus 
+                                </div>
+                            </div>
+                        </div>
+                        <div class="AnnouncementCards">
+                            <div class="boldLetter"> 
+                                Updated Privacy Policy
+                                <div> 
+                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+                                    Reiciendis consequuntur natus 
+                                </div>
                             </div>
                         </div>
                     </div>
-                    <div class="AnnouncementCards">
-                        <div class="boldLetter"> 
-                            Community Share Day
-                            <div> 
-                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
-                                Reiciendis consequuntur natus 
+                </div> 
+                <div class="trending"> 
+                    <h3> Trending </h3>
+                    <div class="trendingContainer">
+                        <div class="trendingCards">
+                            <img src="../Admin-Dashboard/images/tuqa-nabi-uhnZZUaTIOs-unsplash.jpg" alt="">
+                            <div class="title">@DousKegan
+                                <div> Peacer Upper </div>
                             </div>
                         </div>
-                    </div>
-                    <div class="AnnouncementCards">
-                        <div class="boldLetter"> 
-                            Updated Privacy Policy
-                            <div> 
-                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
-                                Reiciendis consequuntur natus 
+                        <div class="trendingCards">
+                            <img src="../Admin-Dashboard/images/lance-reis-T87n3djAN9c-unsplash.jpg" alt="">
+                            <div class="title">@PerpaLinthos
+                                <div> destroyer of dreams </div>
                             </div>
                         </div>
-                    </div>
-                </div>
-            </div> 
-            <div class="trending"> 
-                <h3> Trending </h3>
-                <div class="trendingContainer">
-                    <div class="trendingCards">
-                        <img src="../Admin-Dashboard/images/tuqa-nabi-uhnZZUaTIOs-unsplash.jpg" alt="">
-                        <div class="title">@DousKegan
-                            <div> Peacer Upper </div>
+                        <div class="trendingCards">
+                            <img src="../Admin-Dashboard/images/edgar-nKC772R_qog-unsplash.jpg" alt="">
+                            <div class="title">@Kriptain
+                                <div> Chunky Eater</div>
+                            </div>
                         </div>
-                    </div>
-                    <div class="trendingCards">
-                        <img src="../Admin-Dashboard/images/lance-reis-T87n3djAN9c-unsplash.jpg" alt="">
-                        <div class="title">@PerpaLinthos
-                            <div> destroyer of dreams </div>
-                        </div>
-                    </div>
-                    <div class="trendingCards">
-                        <img src="../Admin-Dashboard/images/edgar-nKC772R_qog-unsplash.jpg" alt="">
-                        <div class="title">@Kriptain
-                            <div> Chunky Eater</div>
-                        </div>
-                    </div>
-                    <div class="trendingCards">
-                        <img src="../Admin-Dashboard/images/flouffy-VBkIK3qj3QE-unsplash.jpg" alt="">
-                        <div class="title">@BillyBobbyGreen
-                            <div> Golf Pro</div>
+                        <div class="trendingCards">
+                            <img src="../Admin-Dashboard/images/flouffy-VBkIK3qj3QE-unsplash.jpg" alt="">
+                            <div class="title">@BillyBobbyGreen
+                                <div> Golf Pro</div>
+                            </div>
                         </div>
                     </div>
                 </div>
