cleaned up the website and added the profile pictures

--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
             </div>
             <div class="profileContainer">
                     <img class="resize1" src="../Admin-Dashboard/images/bell-ring-outline.svg" alt="">
-                    <img class="resize" src="../Admin-Dashboard/images/emoticon-devil-outline.svg" alt="">
-                <h3> Chris Topherstoper </h3>
+                    <img class="resize" src="../Admin-Dashboard/images/Sprite-0001.png" alt="profile">
+                <h3> Ken masters </h3>
             </div>
             <div class="welcomeSection"> 
                 <div class="profilePicTwo"> </div>
-                <div> Hello, there 
-                    <div>Chris Topherstoper</div>
+                <div> Hello there, 
+                    <div>Ken Masters(@KenIsTooCool)</div>
                 </div>
             </div>
             <div class="buttonContainer">
@@ -33,7 +33,7 @@
         <div class="sidebar">
             <div class="icon"> 
                 <div> 
-                    <img src="" alt="">
+                    <img src="../Admin-Dashboard/images/view-dashboard.svg" alt="">
                     dashboard</div>
             </div>
             <ul class="mainLinks">
@@ -81,6 +81,11 @@
                         voluptatum blanditiis, laudantium maxime! Natus?
                     </div>
                     <div class="imgBox">
+                        <div class="items">
+                            <img src="../Admin-Dashboard/images/star-plus-outline.svg" alt="">
+                            <img src="../Admin-Dashboard/images/eye-plus-outline.svg" alt="">
+                            <img src="../Admin-Dashboard/images/share-outline.svg" alt="">
+                        </div>
                     </div>
                 </div>
                 <div class="card">
@@ -91,6 +96,11 @@
                         onsequatur beatae aliquid nisi eveniet impedit assumenda magni earum. Ad.
                     </div>
                     <div class="imgBox">
+                        <div class="items">
+                            <img src="../Admin-Dashboard/images/star-plus-outline.svg" alt="">
+                            <img src="../Admin-Dashboard/images/eye-plus-outline.svg" alt="">
+                            <img src="../Admin-Dashboard/images/share-outline.svg" alt="">
+                        </div>
                     </div>
                 </div>
                 <div class="card">
@@ -102,6 +112,11 @@
                         Id minima consectetur exercitationem.
                     </div>
                     <div class="imgBox">
+                        <div class="items">
+                            <img src="../Admin-Dashboard/images/star-plus-outline.svg" alt="">
+                            <img src="../Admin-Dashboard/images/eye-plus-outline.svg" alt="">
+                            <img src="../Admin-Dashboard/images/share-outline.svg" alt="">
+                        </div>
                     </div>
                 </div>
                 <div class="card">
@@ -113,6 +128,11 @@
                         Id minima consectetur exercitationem.
                     </div>
                     <div class="imgBox">
+                        <div class="items">
+                            <img src="../Admin-Dashboard/images/star-plus-outline.svg" alt="">
+                            <img src="../Admin-Dashboard/images/eye-plus-outline.svg" alt="">
+                            <img src="../Admin-Dashboard/images/share-outline.svg" alt="">
+                        </div>
                     </div>
                 </div>
                 <div class="card">
@@ -124,6 +144,11 @@
                         Id minima consectetur exercitationem.
                     </div>
                     <div class="imgBox">
+                        <div class="items">
+                            <img src="../Admin-Dashboard/images/star-plus-outline.svg" alt="">
+                            <img src="../Admin-Dashboard/images/eye-plus-outline.svg" alt="">
+                            <img src="../Admin-Dashboard/images/share-outline.svg" alt="">
+                        </div>
                     </div>
                 </div>
                 <div class="card">
@@ -135,6 +160,11 @@
                         Id minima consectetur exercitationem.
                     </div>
                     <div class="imgBox">
+                        <div class="items">
+                            <img src="../Admin-Dashboard/images/star-plus-outline.svg" alt="">
+                            <img src="../Admin-Dashboard/images/eye-plus-outline.svg" alt="">
+                            <img src="../Admin-Dashboard/images/share-outline.svg" alt="">
+                        </div>
                     </div>
                 </div>
             </div>
@@ -144,27 +174,27 @@
                     <h3> Announcements </h3>
                     <div class="AnnouncementsContainer"> 
                         <div class="AnnouncementCards">
-                            <div class="boldLetter"> 
-                                Site Maintenance
-                                <div> 
+                            <div> 
+                                <div class="boldLetter">Site Maintenance </div>
+                                <div class="words"> 
                                     Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
                                     Reiciendis consequuntur natus 
                                 </div>
                             </div>
                         </div>
                         <div class="AnnouncementCards">
-                            <div class="boldLetter"> 
-                                Community Share Day
-                                <div> 
+                            <div> 
+                                <div class="boldLetter"> Community Share Day </div>
+                                <div class="words"> 
                                     Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
                                     Reiciendis consequuntur natus 
                                 </div>
                             </div>
                         </div>
                         <div class="AnnouncementCards">
-                            <div class="boldLetter"> 
-                                Updated Privacy Policy
-                                <div> 
+                            <div> 
+                                <div class="boldLetter"> Updated Privacy Policy </div>
+                                <div class="words"> 
                                     Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
                                     Reiciendis consequuntur natus 
                                 </div>
