added a font family and changed the color to red

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Admin</title>
         <link rel="stylesheet" href="style.css">
+        <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&display=swap" rel="stylesheet">
+        
     </head>
     <body class="gridContainer">
         <header class="header">
@@ -73,7 +75,7 @@
             <div class="projectCard">
                 <h3> Your Projects </h3>
                 <div class="card">
-                    <div class="title"> Coolio Project </div>
+                    <div class="title"> EX Hado Drive Rush </div>
                     <div class="cardTxt">
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                         Reprehenderit delectus tenetur beatae unde neque! Maxime voluptates 
@@ -89,7 +91,7 @@
                     </div>
                 </div>
                 <div class="card">
-                    <div class="title"> Humongus </div>
+                    <div class="title"> Tatsu Overhead </div>
                     <div class="cardTxt">
                         Lorem ipsum, dolor sit amet consectetur adipisicing elit. Magni, vero 
                         similique. Aliquam fuga libero dolorum aut nulla, rerum blanditiis error
@@ -104,7 +106,7 @@
                     </div>
                 </div>
                 <div class="card">
-                    <div class="title"> Bigungus </div>
+                    <div class="title"> TC whiff H.Jinrai overhead </div>
                     <div class="cardTxt">
                         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempore 
                         fuga nam eveniet nesciunt quam, atque officia id, cupiditate 
@@ -120,7 +122,7 @@
                     </div>
                 </div>
                 <div class="card">
-                    <div class="title"> Chirpdslorbedo </div>
+                    <div class="title"> Tatsu Throw Loop </div>
                     <div class="cardTxt">
                         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempore 
                         fuga nam eveniet nesciunt quam, atque officia id, cupiditate 
@@ -136,7 +138,7 @@
                     </div>
                 </div>
                 <div class="card">
-                    <div class="title"> Chirpdslorbedo </div>
+                    <div class="title"> EX Dp for One mill </div>
                     <div class="cardTxt">
                         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempore 
                         fuga nam eveniet nesciunt quam, atque officia id, cupiditate 
@@ -152,7 +154,7 @@
                     </div>
                 </div>
                 <div class="card">
-                    <div class="title"> Chirpdslorbedo </div>
+                    <div class="title"> Low M.jinrai </div>
                     <div class="cardTxt">
                         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempore 
                         fuga nam eveniet nesciunt quam, atque officia id, cupiditate 
@@ -169,7 +171,6 @@
                 </div>
             </div>
             <div class="sideBox">
-
                 <div class="Announcements"> 
                     <h3> Announcements </h3>
                     <div class="AnnouncementsContainer"> 
@@ -235,49 +236,3 @@
         </main>
     </body>
 </html>
-
-<!--
-    <div class="searchField"> 
-                <div class="searchIcon"> </div>
-                <input id="searchBar" type="text" name="searchBar">
-            </div>
-            <div class="profileContainer">
-                    <img src="../Admin-Dashboard/images/bell-ring-outline.svg" alt="">
-                    <img src="../Admin-Dashboard/images/emoticon-devil-outline.svg" alt="">
-                <h3> Chris Topherstoper </h3>
-            </div>
-            <div class="welcomeSection"> 
-                <div class="profilePicTwo"> </div>
-                <div> Hello, there 
-                    <div>timmothy honesy</div>
-                </div>
-            </div>
-            <div class="buttonContainer">
-                <button>new</button>
-                <button>Upload</button>
-                <button>Share</button>
-            </div>
--->
-
-<!-- 
-
-    <div class="searchBar">
-        <div class="searchIcon" type="image" src=".//images/search-web.svg"> </div>
-        <div> <input type="text"> </div>
-    </div>
-    <div class="profileBar">
-        <div class="profileName"> 
-            <img src="../Admin-Dashboard/images/bell-ring-outline.svg" alt="noti">
-        </div>
-        <div class="profileName">
-            <img src="../Admin-Dashboard/images/emoticon-confused-outline.svg" alt="">
-        </div>
-        Chirstopher Wistopher
-    </div>
-    </div>
-    <div class="welcomeSection">
-    <img src="../Admin-Dashboard/images/emoticon-angry.svg" alt="">
-    <h3> Hi there,</h3>
-    <h1> Chirstopher Wistopher </h1>
-    </div>
--->
